Fix menu button spacing

--- a/src/components/menu/MenuContainer.scss
+++ b/src/components/menu/MenuContainer.scss
@@ -31,16 +31,18 @@
   display: flex;
   flex-direction: column;
   background-color: $base-dark;
+  padding-bottom: 2%;
+  width: 100%;
 }
 .item-container::-webkit-scrollbar {
   display: none;
 }
 .item-container {
-  flex-grow: 1;
   overflow-y: scroll;
   overflow-x: hidden;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  padding-left: 9px;
 }
 
 .category-selectors {
@@ -52,7 +54,5 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  align-items: center;
-  justify-content: space-evenly;
-  border: thin solid black;
+  align-items: flex-start;
 }
