--- a/src/components/menu/MenuItem.scss
+++ b/src/components/menu/MenuItem.scss
@@ -5,11 +5,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 70px;
+  height: 93px;
   flex: 1 1 auto;
   min-width: 120px;
   max-width: 120px;
-  margin-bottom: 1em;
+  margin-bottom: 3px;
+  margin-right: 3px;
+  flex: 0 0 25%;
   cursor: pointer;
 }
 .menu-item-inside:hover {
